--- a/src/app/overview/style.less
+++ b/src/app/overview/style.less
@@ -1,6 +1,7 @@
 .overview-view {
+  height: 100%;
     .chart{
-        height: 400px;
-        width: 600px;
+      height: 49%;
+      // width: 600px;
     }
 }
