--- a/src/app/users/externalUsers/editExternalUser/row-externalUser-remove.html
+++ b/src/app/users/externalUsers/editExternalUser/row-externalUser-remove.html
@@ -1,5 +1,5 @@
 <div class="groups-remove ngCellText col3 colt3">
-	<div ng-click="removeg(row)" >
+	<div ng-click="removeExternalUser(row)" >
 		<a>移出群组</a>
 	</div>
 </div>
