--- a/src/app/users/externalUsers/editExternalUser/row-externalUser-role.html
+++ b/src/app/users/externalUsers/editExternalUser/row-externalUser-role.html
@@ -1,8 +1,14 @@
 <div class="user-activety ngCellText col3 colt3">
 	<div class="roll" style="display: block;">
-		<select ng-model="row.entity.role_id" class="">
-			<option value="0">群组成员</option>
-			<option value="1">群组管理员</option>
+		<select ng-model="row.entity.permission" class="">
+			<option value="1111111">拥有者</option>
+			<option value="0111111">编辑者</option>
+      <option value="0001111">查看上传者</option>
+      <option value="0000101">预览上传者</option>
+      <option value="0001110">查看者</option>
+      <option value="0111111">编辑者</option>
+      <option value="0000100">预览者</option>
+      <option value="0000001">上传者</option>
 		</select>
 	</div>
 </div>
