--- a/src/app/users/externalUsers/editExternalUser/style.less
+++ b/src/app/users/externalUsers/editExternalUser/style.less
@@ -1,9 +1,14 @@
 .editExternalUser-header{
-  height: 10%;
+  height: 5%;
+  padding: 0 15px;
+  min-height: 25px;
+  h3{
+   font-size: 20px;    
+  }
 }
 
 .editExternalUser{
-  height: 90%;
+  height: 95%;
   overflow-y: auto;
   label{
     margin-bottom: 0px;
