--- a/src/app/users/externalUsers/style.less
+++ b/src/app/users/externalUsers/style.less
@@ -1,5 +1,8 @@
 .externalUsers-view {
   height: 100%;
+  a{
+    text-decoration: none;     
+  }
   .buttonGroup{
       border-bottom: 1px solid #afafaf;
       margin-left: 40px;
@@ -45,6 +48,14 @@
      .action img:first-child{
         padding-left: 0px;
      }
+     
+     .ngRow.even {     
+         background-color: white;
+      }
+      
+      .ngTopPanel {
+        background-color: white;
+      }
 //   .grid-align {
 //       text-align: center;
 //   }
