--- a/src/app/users/externalUsers/template.html
+++ b/src/app/users/externalUsers/template.html
@@ -4,5 +4,5 @@
 			增加外部用户
 		</button>-->
 	</div>
-	<div class="groupGridStyle" ng-grid="groupGridOptions"></div>
+	<div class="groupGridStyle" ng-grid="externalUserGridOptions"></div>
 </div>
