--- a/src/app/users/groups/editGroup/update-group-modal.html
+++ b/src/app/users/groups/editGroup/update-group-modal.html
@@ -17,21 +17,21 @@
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" ng-model="group.config.show_member"/>
-						允许该用户查看所有的内部用户&nbsp;</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
+						允许该群组的所有成员可以看见所有的内部用户和群组&nbsp;</label><span tooltip="如果选中，则该群组的成员在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户和群组。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>		
 			<div class="form-group permission-checkbox">
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" ng-model="group.config.desktop_sync">
-						允许此群组所有用户同步到全协同步文件&nbsp;</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
+						允许该群组的所有成员在全携通与桌面端之间同步文件&nbsp;</label><span tooltip="如果选中，则允许该群组的成员在全携通网页端与桌面客户端之间双向同步文件。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>			
 			<div class="form-group permission-checkbox">
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" ng-model="group.config.inner_share">
-						限定该群组中的用户在自己的的问佳佳中只能邀请内部用户进行写作&nbsp;</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
+						限定该群组的所有成员只能进行内部协作&nbsp;</label><span tooltip="如果选中，则禁止该群组的成员在自己的文件夹中邀请外部用户进行协作。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 			<div class="form-group">
