--- a/src/app/users/managedUsers/editUser/add-groups-window-modal.html
+++ b/src/app/users/managedUsers/editUser/add-groups-window-modal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<h3 class="modal-title">选择群组</h3>
+	<h3 class="modal-title modal-header">选择群组</h3>
 </div>
 <div class="modal-body">
 	<form role="form" class="form-horizontal">
