--- a/src/app/users/managedUsers/style.less
+++ b/src/app/users/managedUsers/style.less
@@ -1,5 +1,8 @@
 .managedUsers-view {
   height: 100%;
+  a{
+    text-decoration: none;     
+  }
   .buttonGroup{
       border-bottom: 1px solid #afafaf;
       margin-left: 40px;
