--- a/src/app/users/userHeader/style.less
+++ b/src/app/users/userHeader/style.less
@@ -7,20 +7,24 @@
     .nav > li > a:hover,
     .nav > li > a:focus {
         text-decoration: none;
-        background-color: #1F69BA;
-        color: white;
+        background-color: white;
+//      color: white;
     }
     .nav-sidebar li {
-        width: 105px;
+//      width: 105px;
+        margin: 0 12px;
         float: left;
+        padding-left: 0;
+        padding-right: 0;
         text-align: center;           
     }    
     .active {
-        border-bottom: 3px solid #1F69BA;
+//      border-bottom: 3px solid #1F69BA;
 //      background-color: #1F69BA;
 //      color: white;
     }
     .active a{
+        border-bottom: 7px solid #1F69BA;
 //      color: white;
     } 
 }
