--- a/src/app/users/groups/editGroup/style.less
+++ b/src/app/users/groups/editGroup/style.less
@@ -1,9 +1,15 @@
 .editGroup-header{
-  height: 10%;
+  height: 5%;
+  height: 5%;
+  padding: 0 15px;
+  min-height: 25px;
+  h3{
+   font-size: 20px;    
+  }
 }
 
 .editGroup{
-  height: 90%;
+  height: 95%;
   overflow-y: auto;
   label{
     margin-bottom: 0px;
