--- a/src/app/users/managedUsers/editUser/style.less
+++ b/src/app/users/managedUsers/editUser/style.less
@@ -1,9 +1,16 @@
 .editUser-header{
-  height: 10%;
+  height: 5%;
+  padding: 0 15px;
+  min-height: 25px;
+  // padding: 15px;
+  // border-bottom: 1px solid #e5e5e5;
+  h3{
+   font-size: 20px;    
+  }
 }
 
 .editUser{
-  height: 90%;
+  height: 95%;
   overflow-y: auto;
   label{
     margin-bottom: 0px;
