--- a/src/app/users/managedUsers/editUser/update-user-modal.html
+++ b/src/app/users/managedUsers/editUser/update-user-modal.html
@@ -50,11 +50,11 @@
 						限定该用户在自己的文件夹中只能邀请内部用&nbsp;</label><span  tooltip-placement="bottom" tooltip="如果选中，则禁止该用户在自己的文件夹中邀请外部用户进行协作。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
-			<div class="form-group permission-checkbox">
+			<div class="form-group permission-checkbox" ng-show = "coAdmin">
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" >
-						协同管理选&nbsp;</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
+						<input type="checkbox" ng-model="user.config.co_admin">
+						协同管理员&nbsp;</label><span tooltip="授予该用户管理员权限（不能管理主要管理员 main admin，也即不能点击main admin进行编辑；并且协同管理员不能取消自己的管理员权限）。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 			<div class="form-group">
