connect with index.html

--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -1,6 +1,6 @@
 <div class="header-view" ng-controller="App.Header.Controller">
 	<div class="header-ext">
-		<div class="back-main pull-right">
+		<div class="back-main pull-right" ng-click = "backToindex()">
 			<div class="back-img"></div>
 			返回我的主页面
 		</div>
