--- a/src/app/users/groups/editGroup/row-folders-remove.html
+++ b/src/app/users/groups/editGroup/row-folders-remove.html
@@ -1,5 +1,5 @@
 <div class="groups-remove ngCellText col3 colt3">
-	<div>
-		<a ng-click="removeg(row)">移除群组</a>
+	<div ng-click="removeFolder(row)" >
+		<a>移除协作</a>
 	</div>
 </div>
