--- a/src/app/users/managedUsers/add-group-window-modal.html
+++ b/src/app/users/managedUsers/add-group-window-modal.html
@@ -9,12 +9,12 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<div class="gridStyle col-sm-12" ng-grid="selectedGroupGridOptions"></div>
+			<div class="col-sm-12" ng-grid="selectedGroupGridOptions"></div>
 		</div>
 	</form>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="ok(group)">
+	<button class="btn btn-primary" ng-click="ok()">
 		确定
 	</button>
 	<button class="btn btn-default" ng-click="cancel()">
