--- a/src/app/users/managedUsers/editUser/row-folders-remove.html
+++ b/src/app/users/managedUsers/editUser/row-folders-remove.html
@@ -1,5 +1,5 @@
 <div class="groups-remove ngCellText col3 colt3">
 	<div>
-		<a ng-click="removeExternalUser(row)">移除文件夹</a>
+		<a ng-click="removeFolder(row)">移除协作</a>
 	</div>
 </div>
