--- a/src/app/global.less
+++ b/src/app/global.less
@@ -1,6 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family:Microsoft YaHei;
     background-color: @body-background-color;
     height: 100%;
     width: 100%;
