--- a/src/app/users/managedUsers/editUser/add-folders-window-modal.html
+++ b/src/app/users/managedUsers/editUser/add-folders-window-modal.html
@@ -1,21 +1,21 @@
 <div class="modal-header">
-	<h3 class="modal-title">选择群组</h3>
+	<h3 class="modal-title">选择协作文件夹</h3>
 </div>
 <div class="modal-body">
 	<form role="form" class="form-horizontal">
 		<div class="form-group">
 			<div class="col-sm-5">
-				<input type="name" placeholder="输入群组名称查找" class="form-control" ng-model="seachGroupsValue" ng-change="seachGroups(seachGroupsValue)">
+				<input type="name" placeholder="输入文件夹名称查找" class="form-control" ng-model="seachFoldersValue" ng-change="seachFolders(seachFoldersValue)">
 			</div>
 		</div>
 		<div class="form-group">
-			<div class="gridStyle col-sm-12" ng-grid="selectedGroupGridOptions"></div>
+			<div class="gridStyle col-sm-12" ng-grid="selectedFolderGridOptions"></div>
 		</div>
 	</form>
 </div>
 <div class="modal-footer">
 	<button class="btn btn-primary" ng-click="ok()">
-		确定
+		确认
 	</button>
 	<button class="btn" ng-click="cancel()">
 		取消
