--- a/src/app/users/managedUsers/editUser/update-user-modal.html
+++ b/src/app/users/managedUsers/editUser/update-user-modal.html
@@ -68,17 +68,17 @@
 				<div class="gridStyle col-sm-8" ng-grid="gridGroup"></div>
 				<div class="col-sm-4"></div>
 			</div>
-			<!--<div class="form-group">
+			<div class="form-group">
 				<label>可以访问的协作文件夹</label>
 			</div>
-			<div class="form-group">
-				<input type="text" placeholder="搜索文件夹名称" class="form-control seach-files"/>
-				<input type="button" class="btn btn-default" value="添加协作文件夹"/>
+			<div class="form-group seach-folder">
+				<input type ="text" placeholder="搜索所在文件夹" class="form-control seach-group" ng-model="seachFoldersValue" ng-change="seachFolders(seachFoldersValue)"/>
+				<input type="button" class="btn btn-default" value="添加协作文件夹" ng-click= "addFolderWin()"/>
 			</div>
 			<div class="form-group gridStyleform">
-				<div class="gridStyle col-sm-8" ng-grid="gridGroup"></div>
+				<div class="gridStyle col-sm-8" ng-grid="gridFolder"></div>
 				<div class="col-sm-4"></div>
-			</div>-->
+			</div>
 			<div class="form-group">
 				<a ui-sref="users.managedUsers">
 					<button class="btn btn-primary" ng-click="updateUser(user)">保存修改</button>
