--- a/src/app/app.less
+++ b/src/app/app.less
@@ -9,3 +9,7 @@
 
 @import "./header/style";
 @import "./sidebar/style";
+@import "./updates/style";
+@import "./files/style";
+@import "./contacts/style";
+@import "./trash/style";
