--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -1,9 +1,74 @@
 .header-view {
-    .header-ext{
+    .header-top{
         background-image: url("../../images/web_topbar_blue.png");
 //      background-color: @header-ext-background-color;
         color: white;
         height: 30px;
+        .user-info{
+            border-left: 1px solid #1b599b;
+            padding-left: 10px;
+            margin-top: 4px;
+            height: 22px;
+        }
+        
+        .to-admin-control{
+            border-right: 1px solid #2273cc;
+            border-left: 1px solid #1b599b;
+            font-size: 15px;
+            padding-right: 10px;
+            padding-left: 10px;
+            height: 22px;
+            margin-top: 4px;
+            line-height: 1.3;
+        }
+        
+        .notif_box {
+            position:relative;
+            float: right;
+            padding-right: 10px;
+            height: 22px;
+            margin-top: 4px;
+            border-right: 1px solid #2273cc;
+        }
+        
+        .username {
+            margin-right: 40px;
+            margin-top: 4px;
+            font-size: 14px;
+            float: right;
+            margin-left: 8px;
+            cursor: pointer;
+            span{
+               float: left;
+               margin-right: 7px;
+               margin-top: -5px;
+               font-size:15px; 
+           }
+        }
+        
+        .personalInfor{
+            margin-top: 4px;
+            background: url(../../images/arrows.png) no-repeat;
+            -moz-transition:-moz-transform 0.2s; /* Firefox 4 */
+            -webkit-transition:-webkit-transform 0.2s; /* Safari and Chrome */
+            -o-transition:-o-transform 0.2s; /* Opera */
+            -ms-transition:-ms-transform 0.2s; /* IE */
+            -sand-transition:-sand-transform 0.2s; /* IE */
+            float: right;
+            height: 8px;
+            width: 17px;
+            cursor: pointer;
+        }
+        
+        .hover .personalInfor {
+            transform:rotate(180deg);
+            -sand-transform: rotate(180deg);/* IE */
+            -ms-transform: rotate(180deg); /* IE */
+            -moz-transform:rotate(180deg); /* Firefox 4 */
+            -webkit-transform:rotate(180deg); /* Safari and Chrome */
+            -o-transform:rotate(180deg); /* Opera */
+        }
+        
         .back-main{
             margin-right: 36px;
             margin-top: 5px;
@@ -17,6 +82,13 @@
                 margin-top: 3px;
                 width: 13px;
             }
+        }
+        
+        .userpic {
+            float: right;
+            margin-top: -2px;
+            width: 26px;
+            height: 26px;
         }
         
     }
