--- a/src/app/sidebar/style.less
+++ b/src/app/sidebar/style.less
@@ -8,41 +8,45 @@
         background-color: #d6dce2;
     }
     
-    .overview{
+    .updates{
         padding-left: 45px; 
     }
-    .overview-img{
-        background: url("../../images/icon_overview.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+    .updates-img{
+        background: url("../../images/leftmenu_icon.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        background-position: 0px -15px;
         height:19px;
         width: 19px;
         left: 20px;
         position: absolute;
     }
-    .users{
+    .files{
         padding-left: 45px;
     }
-    .users-img{
-        background: url("../../images/icon_users.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+    .files-img{
+        background: url("../../images/leftmenu_icon.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        background-position: 0px -65px;
         height:19px;
         width: 19px;
         left: 20px;
         position: absolute;
     }
-    .reports{
+    .contacts{
         padding-left: 45px;
     }
-    .reports-img{
-        background: url("../../images/icon_report.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+    .contacts-img{
+        background: url("../../images/leftmenu_icon.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        background-position: 0px -115px;
         height:19px;
         width: 19px;
         left: 20px;
         position: absolute;
     }
-    .settings{
+    .trash{
         padding-left: 45px;
     }
-    .settings-img{
-        background: url("../../images/icon_setting.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+    .trash-img{
+        background: url("../../images/leftmenu_icon.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        background-position: 0px -165px;
         height:19px;
         width: 19px;
         left: 20px;
