--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -29,6 +29,52 @@
             height: 22px;
             margin-top: 4px;
             border-right: 1px solid #2273cc;
+            span{
+                display: inline-block;
+                float: right;
+                font-size: 18px;
+                height: 100%;
+                line-height: 63px;
+                padding: 0 10px;
+            }
+            .notice{
+                background: url('../../images/topbar_notification_icon.png') no-repeat;
+                height: 21px;
+                cursor: pointer;
+                background-position: -57px -4px;
+                width: 10px;
+                height: 24px;
+            }
+            .message{
+                background: url('../../images/topbar_notification_icon.png') no-repeat;
+                background-position: -13px -4px;
+                margin-right: 20px;
+                height: 24px;
+                width: 20px;
+                cursor: pointer;
+            }
+            
+            .message-count{
+                background-color: #d13434;
+                border-radius: 8px;
+                color: #ffffff;
+                display: none;
+                height: 16px;
+                line-height: 16px;
+                position: absolute;
+                text-align: center;
+                top: -3px;
+                white-space: nowrap;
+                width: 16px;
+            }
+            
+            .notice-count{
+                right: 2px;
+            }
+            
+            .letter-count{
+                left: 12px;
+            }
         }
         
         .username {
