--- a/src/app/sidebar/template.html
+++ b/src/app/sidebar/template.html
@@ -1,27 +1,27 @@
 <div class="sidebar-view" ng-controller="App.Sidebar.Controller">
   <ul class="nav nav-sidebar">
-    <li ng-class="{ active: $state.includes('overview') }">
-      <a ui-sref="overview" class="overview">
-        <span class="overview-img"></span>
-        	概况
+    <li ng-class="{ active: $state.includes('updates') }">
+      <a ui-sref="updates" class="updates">
+        <span class="updates-img"></span>
+        	最近更新
       </a>
     </li>
-    <li ng-class="{ active: $state.includes('users') }">
-      <a ui-sref="users.managedUsers" class="users">
-        <span class="users-img"></span>
-        	用户与群组
+    <li ng-class="{ active: $state.includes('files') }">
+      <a ui-sref="files" class="files">
+        <span class="files-img"></span>
+        	所有文件
       </a>
     </li>
-    <li ng-class="{ active: $state.includes('reports') }">
-      <a ui-sref="reports" class="reports">
-        <span class="reports-img"></span>
-        	报告
+    <li ng-class="{ active: $state.includes('contacts') }">
+      <a ui-sref="contacts" class="contacts">
+        <span class="contacts-img"></span>
+        	联系人
       </a>
     </li>
-    <li ng-class="{ active: $state.includes('settings') }">
-      <a ui-sref="settings" class="settings">
-        <span class="settings-img"></span>
-       		设置
+    <li ng-class="{ active: $state.includes('trash') }">
+      <a ui-sref="trash" class="trash">
+        <span class="trash-img"></span>
+       		回收中心
       </a>
     </li>
   </ul>
