--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -1,3 +1,14 @@
 <div class="files-view" ng-controller="App.Files.Controller">
-	files
+  <div class="top-bar">
+    <div class="folder-crumb">
+    </div>
+    <div class="view-model-swither"></div>
+  </div>
+  <div class="folder-grid">
+    <ul>
+      <li ng-repeat="obj in objList">
+        <a ui-sref="files({folderId: obj.file_id})">{{obj.file_name}}</a>
+      </li>
+    </ul>
+  </div>
 </div>
