--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -9,6 +9,9 @@
             padding-left: 10px;
             margin-top: 4px;
             height: 22px;
+            .dropdown-menu{
+                top:30px;
+            }
         }
         
         .to-admin-control{
@@ -58,7 +61,7 @@
                 background-color: #d13434;
                 border-radius: 8px;
                 color: #ffffff;
-                display: none;
+//              display: none;
                 height: 16px;
                 line-height: 16px;
                 position: absolute;
