--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -1,10 +1,14 @@
 <div class="header-view" ng-controller="App.Header.Controller">
 	<div class="header-top">
-		<div class="user-info pull-right">
-			<div class="username" ng-class="{hover: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false">
+		<div class="user-info pull-right" dropdown is-open="status.isopen">
+			<div class="username dropdown-toggle" ng-class="{hover: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false">
 				<span>{{user.user_name}}</span>
 				<div class="personalInfor"></div>
 			</div>
+			<ul class="dropdown-menu" role="menu">
+        		<li><a href="#">个人信息</a></li>
+        		<li><a href="#">退出</a></li>
+      		</ul>
 			<img class="userpic" ng-src="{{user.avatar}}" alt="" />
 		</div>
 		<div class="to-admin-control pull-right">
@@ -12,9 +16,9 @@
 		</div>
 		<div class="notif_box" class="message-notice pull-right">
 			<span class="notice" title="通知"></span>
-			<label class="message-count notice-count"></label>
+			<label class="message-count notice-count" ng-show = "showMessageCount">{{messageCount}}</label>
 			<span class="message" title="消息"></span>
-			<label class="message-count letter-count"></label>
+			<label class="message-count letter-count" ng-show = "showMoticeCount">{{noticeCount}}</label>
 		</div>
 	</div>
 	<div class="header-search" role="navigation">
