--- a/src/app/sidebar/style.less
+++ b/src/app/sidebar/style.less
@@ -57,4 +57,20 @@
         border-left: 5px solid #1f69ba;
         
     }
+    
+    .storage{
+        background-color: #ffffff;
+        border-top: 1px solid #c8c8c8;
+        bottom: 0;
+        height: 60px;
+        padding-top: 14px;
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    
+    .progress{
+        margin-bottom: 5px;
+    }
 }
