--- a/src/app/sidebar/template.html
+++ b/src/app/sidebar/template.html
@@ -25,4 +25,8 @@
       </a>
     </li>
   </ul>
+  <div class="storage">
+  	<div class="col-sm-12"><progressbar class="" value= "storage.percentage" type="success">{{storage.percentage}}%</progressbar></div>
+  	<span class="pull-right">{{storage.used_space}}/{{storage.total_space}}</span>
+  </div>
 </div>
