--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -24,7 +24,7 @@
 	<div class="header-search" role="navigation">
 		<div class="logo pull-left"></div>
 		<div class="search pull-left">
-			<input type="text" class="search-text form-control" placeholder="搜索"/>
+			<input type="text" placeholder="搜索" class="search-text form-control">
 			<button class="search-button btn btn-default">
 				搜索
 			</button>
