--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -16,7 +16,7 @@
   }
   
   .selected{
-    background-color: green;  
+    background-color: #ebf1f7;  
   }
   
   .input-checkbox-td{
@@ -30,6 +30,14 @@
   
   .form-control{
     width: 50%;  
+  }
+  
+  .rename-file{
+    width: 40%;  
+  }
+  
+  .rename-form{
+    padding-top: 5px;  
   }
   
   .img-name-td{
@@ -93,4 +101,12 @@
     height:19px;
     width: 16px;  
   }
+  
+  .position-fixed {
+    position: fixed;
+  }
+}
+
+.move-file-modal-view{
+
 }
