--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -1,85 +1,126 @@
 <div class="files-view" ng-controller="App.Files.Controller">
-  <div class="top-bar">
-    <div class="pull-left">
-      <a ui-sref="files({folderId: 0})">根目录</a> 
-    </div>
-    <div class="folder-crumb pull-left" ng-repeat="path in folderPath">
-      ：<a ui-sref="files({folderId: path.id})">{{path.name}}</a>
-    </div>
-    <div class="view-model-swither pull-right">
-      视图转换and排序
-    </div>
-  </div>
-  <div class="buttonGroup">
-    <button ng-click='addUser()' class="btn btn-default">上传文件</button>
-    <button ng-click='showCreateFolder()' class="btn btn-default">新建文件夹</button>
-  </div>
-  <div class="folder-grid">
-    <table class="table">
-      <thead>
-        <tr>
-          <th><input type="checkbox" ng-click = "selectedAllswitch()" ng-model = "selectedAll"/></th>
-          <th>名称</th>
-          <th>状态</th>
-          <th>大小</th>
-          <th>权限</th>
-          <th>分享</th>
-        </tr>
-      </thead>
-      <tbody>
-      	<tr ng-show = "showCreateFolderDiv">
-      		<td>
-      			
-      		</td>
-      		<td>
-      			<div class="col-sm-12">
-      				<input type="text" placeholder="文件夹名称" class="create-folder form-control col-sm-8" ng-model = "createFolderName" >
-      				<div class="create-buttonGroup col-sm-5">
-      					<button ng-click="createFolder(createFolderName)" class="btn btn-default">确定</button>
-    					  <button ng-click="cancleCreate()" class="btn btn-default">取消</button>
-    				</div>	
-      			</div>
-      		</td>
-      	</tr>
-        <tr class="file-row" ng-repeat="obj in objList" ng-class = "{ selected: obj.checked }">
-          <td class="input-checkbox-td">
-            <input type="checkbox" ng-model = "obj.checked" />
-          </td>
-          <td class="img-name-td">
-          	<img ng-src = "images/web_files_personal.png" height="42px" width="42px"/>
-          	<div class="file-name">
-          	  <a ui-sref="files({folderId: obj.file_id})" ng-show = "obj.folder">{{obj.file_name}}</a>
-              <a ng-hide = "obj.folder">{{obj.file_name}}</a>
-              <div class="tag">
-              	<span>+添加标签</span>
-              </div>
-          	</div>
-          </td>
-          <td class="state-td">
-            {{obj.create_uname}}于{{obj.format_date}}更新
-          </td>
-          <td class="file-sise-td">
-            <span ng-show = "obj.folder">{{obj.file_count}}</span>
-            <span ng-hide = "obj.folder">{{obj.format_size}}</span>
-          </td>
-          <td class="permission-td">
-            {{obj.permission}}
-          </td>
-          <td class="action-td">
-          	<div class = "link-share-ico"></div>
-          	<div class = "share-ico"></div>
-          	<div class = "discuss-ico"></div>
-            <!--<span class = "link-share-ico"></span>
-            <span class = "share-ico"></span>
-            <span class = "discuss-ico"></span>-->
-          </td>
-        </tr>
-      </tbody>
-    </table>
-<!--     <ul>
-      <li ng-repeat="obj in objList">
-        <a ui-sref="files({folderId: obj.file_id})">{{obj.file_name}}</a>
-      </li>
-    </ul> -->
-  </div>
+	<div class="top-bar">
+		<div class="pull-left">
+			<a ui-sref="files({folderId: 0})">
+				根目录
+			</a>
+		</div>
+		<div class="folder-crumb pull-left" ng-repeat="path in folderPath">
+			：
+			<a ui-sref="files({folderId: path.id})">
+				{{path.name}}
+			</a>
+		</div>
+		<div class="view-model-swither pull-right">
+			视图转换and排序
+		</div>
+	</div>
+	<div class="buttonGroup">
+		<button ng-click='addUser()' class="btn btn-default">
+			上传文件
+		</button>
+		<button ng-click='showCreateFolder()' class="btn btn-default">
+			新建文件夹
+		</button>
+	</div>
+	<div class="folder-grid">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>
+					<input type="checkbox" ng-click = "selectedAllswitch()" ng-model = "selectedAll"/>
+					</th>
+					<th>名称</th>
+					<th>状态</th>
+					<th>大小</th>
+					<th>权限</th>
+					<th>分享</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-show = "showCreateFolderDiv">
+					<td></td>
+					<td>
+					<div class="col-sm-12">
+						<input type="text" placeholder="文件夹名称" class="create-folder form-control col-sm-8" ng-model = "createFolderName" >
+						<div class="create-buttonGroup col-sm-5">
+							<button ng-click="createFolder(createFolderName)" class="btn btn-default">
+								确定
+							</button>
+							<button ng-click="cancleCreate()" class="btn btn-default">
+								取消
+							</button>
+						</div>
+					</div></td>
+				</tr>
+				<tr class="file-row" ng-repeat="obj in objList" ng-class = "{ selected: obj.checked }" context-menu="onRightClick(obj)" data-target="myMenu">
+					<td class="input-checkbox-td">
+					<input type="checkbox" ng-model = "obj.checked" />
+					</td>
+					<td class="img-name-td">
+						<img ng-src = "images/web_files_personal.png" height="42px" width="42px"/>
+						<div class="file-name" ng-hide = "obj.rename">
+							<a ui-sref="files({folderId: obj.file_id})" ng-show = "obj.folder">
+								{{obj.folder_name}}
+							</a>
+							<a ng-hide = "obj.folder">
+								{{obj.file_name}}
+							</a>
+							<div class="tag">
+								<span>+添加标签</span>
+							</div>
+						</div>
+						<div class="rename-form" ng-show = "obj.rename">
+							<input type="text" class="rename-file form-control col-sm-8" ng-model = "renameInputValue" >
+							<div class="rename-buttonGroup col-sm-5">
+								<button ng-click="renameFile(renameInputValue)" class="btn btn-default">
+									确定
+								</button>
+								<button ng-click="cancleRenameFile()" class="btn btn-default">
+									取消
+								</button>
+							</div>
+						</div>
+					</td>
+					<td class="state-td"> {{obj.create_uname}}于{{obj.format_date}}更新 </td>
+					<td class="file-sise-td"><span ng-show = "obj.folder">{{obj.file_count}}</span><span ng-hide = "obj.folder">{{obj.format_size}}</span></td>
+					<td class="permission-td"> {{obj.permission}} </td>
+					<td class="action-td">
+						<div class = "link-share-ico"></div>
+						<div class = "share-ico"></div>
+						<div class = "discuss-ico"></div>
+					</td>
+				</tr>
+				<div class="dropdown position-fixed" id="myMenu">
+					<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
+						<li>
+							<a class="pointer" role="menuitem" tabindex="1" ng-click="dowloadFile()">
+								下载
+							</a>
+						</li>
+						<li>
+							<a class="pointer" role="menuitem" tabindex="2" ng-click="deleteObj()">
+								删除
+							</a>
+						</li>
+						<li>
+							<a class="pointer" role="menuitem" tabindex="3" ng-click="moveFile()">
+								移动
+							</a>
+						</li>
+						<li>
+							<a class="pointer" role="menuitem" tabindex="4" ng-click="renameFileForm()">
+								重命名
+							</a>
+						</li>
+						<li>
+							<a class="pointer" role="menuitem" tabindex="5" ng-click="addPanel()">
+								讨论
+							</a>
+						</li>
+					</ul>
+				</div>
+			</tbody>
+		</table>
+	</div>
 </div>
