--- a/src/app/global.less
+++ b/src/app/global.less
@@ -25,10 +25,21 @@ html, body {
 }
 
 .right-main{
-    bottom: 0;
+    bottom: 40px;
     float: left;
     left: 260px;
     position: absolute;
     right: 0;
     top: 0;
+}
+
+.main-bottom{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    font-size: 12px;
+    border-top:1px solid #afafaf;
+    left: 260px;
 }
