--- a/src/app/global.less
+++ b/src/app/global.less
@@ -43,3 +43,16 @@ html, body {
     border-top:1px solid #afafaf;
     left: 260px;
 }
+
+.ng-pageslide {
+    background-color: white;
+    border-left: 1px solid #b0b0b0;
+    border-right: 1px solid #b0b0b0;
+    box-shadow: 0 0 3px #b0b0b1;
+//  display: none;
+    height: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 460px;
+}
