--- a/src/app/upload-progress-dialog/template.html
+++ b/src/app/upload-progress-dialog/template.html
@@ -7,7 +7,7 @@
   </div>
   <div class="dialog-body" style="height: 366px;" ng-show="isMax">
       <div class="progress-item" id="ddupload_file_1_progress" ng-repeat="file in files">
-          <img class="file-icon" src="theme_01/images/file_jpg_small.png">
+          <img class="file-icon" src="./images/file_icon.png">
           <span class="file-name" title="webappdigger.png">{{file.file.name}}</span>
           <span class="file-size">2.33KB</span>
           <span class="file-progress">
