--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -96,23 +96,26 @@
   .link-share-ico{
     float: left;
     background: url("../../images/contact_comment_link_icon.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
-    background-position: 0px 0px;
+    background-position: 0px -38px;
     height:19px;
-    width: 16px;  
+    width: 16px;
+    cursor: pointer;  
   }
   .share-ico{
     float: left;
     background: url("../../images/contact_comment_link_icon.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
-    background-position: 0px -20px;
+    background-position: 0px 0px;
     height:19px;
-    width: 16px;  
+    width: 16px;
+    cursor: pointer;  
   }
   .discuss-ico{
     float: left;  
     background: url("../../images/contact_comment_link_icon.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
-    background-position: 0px -39px;
+    background-position: 0px -19px;
     height:19px;
-    width: 16px;  
+    width: 16px;
+    cursor: pointer;  
   }
   
   .position-fixed {
@@ -199,5 +202,37 @@
         bottom: 70px;
         height: 130px;
         position: absolute;
+    }
+}
+
+.invite-team-users{
+    .invite-form{
+        height: 450px;
+        .dropdown-menu{
+            width: 100%;
+            text-align: center;
+        }
+        .selectedItem{
+            background: none repeat scroll 0 0 #eee;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            float: left;
+            margin: 5px;
+            padding: 3px;
+            .deleteSelected{
+                padding: 5px;
+                cursor: pointer;
+            }
+        }
+        form{
+            height: 100%;
+            h5{
+              border-bottom: 1px solid #e5e5e5;  
+            }
+        }
+        .select-invite{
+            height: 100%;
+            border-left: 1px solid #e5e5e5;
+        }
     }
 }
