fix discuss issues

--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -171,14 +171,14 @@
 
 }
 
-#demo-right{
+.user-discuss-view {
     padding: 5px;
     img{
         float: left;
     }
     .disc-item-list{
         bottom: 210px;
-        overflow: hidden;
+        overflow-y: auto;
         position: absolute;
         top: 64px;
     }
