--- a/src/app/files/move-file.html
+++ b/src/app/files/move-file.html
@@ -5,7 +5,7 @@
 	<div>选中:{{abc.currentNode.id}}</div>
 	<div
     data-angular-treeview="true"
-    data-tree-id="abc"
+    data-tree-id="{{treeId}}"
     data-tree-model="treedata"
     data-node-id="id"
     data-node-label="label"
