--- a/src/app/files/invite-team-users.html
+++ b/src/app/files/invite-team-users.html
@@ -1,57 +1,97 @@
-<div class="modal-header">
-	<h3 class="modal-title">邀请协作人</h3>
-</div>
-<div class="modal-body invite-form">
-	<form role="form" class="form-horizontal col-sm-8">
-		<div class="form-group">
-			<div class="col-sm-12">
-				<input type="name" class="form-control" name="username" placeholder="输入姓名或者邮箱" ng-model="inputValue" ng-enter="inviteBypress(inputValue)">
+<div class="invite-team-users-inner" ng-class="{broad:broad}">
+	<div class="modal-header">
+		<h3 class="modal-title">邀请协作人</h3>
+	</div>
+	<div class="modal-body invite-form">
+		<form role="form" class="form-horizontal invite-content" ng-class="{'col-sm-12':!broad, 'col-sm-8':broad}">
+			<div class="form-group input-from-group">
+				<div class="col-sm-12">
+					<input type="name" class="form-control" name="username" placeholder="输入姓名或者邮箱" ng-model="inputValue" ng-enter="inviteBypress()">
+				</div>
 			</div>
-		</div>
-		<div class="form-group">
-			<div class="col-sm-12">
-				<input type="button" class="btn btn-default form-control" ng-click="showGRroupUser()" value="从联系人列表中选取"></input>
+			<div class="form-group or-from-group">
+				<div class="col-sm-12">
+					或
+				</div>
 			</div>
-		</div>
-		<h5>已选取</h5>
-		<div class="form-group">
-			<div class="col-sm-12">
-				<div class="selectedItem" ng-repeat="user in invitedList.userList">
-					<span class="selectedName">{{user}}</span>
-					<span class="fa fa-times deleteSelected" ng-click = "deleteSelected(user)">x</span>
+			<div class="form-group select-from-group">
+				<div class="col-sm-12">
+					<input type="button" class="btn btn-default form-control" ng-click="showGRroupUser()" value="从联系人列表中选取"></input>
+				</div>
+			</div>
+			<h5>已选取</h5>
+			<div class="form-group">
+				<div class="col-sm-12 selected-groups-users">
+					<div class="selectedItem" ng-repeat="group in invitedList.groupList">
+						<span class="selectedName">{{group}}</span>
+						<span class="fa fa-times deleteSelected" ng-click = "deleteSelectedGroup(group)">x</span>
+					</div>
+					<div class="selectedItem" ng-repeat="user in invitedList.userList">
+						<span class="selectedName">{{user}}</span>
+						<span class="fa fa-times deleteSelected" ng-click = "deleteSelectedUser(user)">x</span>
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-12">
+					<div class="dropdown">
+						<button class="btn btn-default dropdown-toggle form-control" type="button" data-toggle="dropdown">
+							{{selectedPermissionValue}}
+							<span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu" role="menu">				
+							<li role="presentation" ng-repeat="value in permission_value" ng-click = "selectedPermission(value)">
+								<a role="menuitem" tabindex="-1">
+									{{value}}
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<h5>留言</h5>
+			<div class="form-group">
+				<div class="col-sm-12">
+					<textarea type="text" placeholder="参与讨论" class="form-control comment-input"></textarea>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-12">
+					<input type="button" class="btn btn-primary form-control" ng-click="showGRroupUser()" value="发送邀请"></input>
+				</div>
+			</div>
+		</form>
+		<div class="col-sm-4 select-invite"  ng-show = "broad">
+			<div class="form-group">
+				<div class="col-sm-12">
+					<input type="name" class="form-control" name="username" placeholder="输入姓名或者邮箱">
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-12">
+					全选
+				</div>
+			</div>
+			<div class="groups-div">
+				<div class="group" ng-repeat="group in groupList">
+					<input type="checkbox" ng-click = "inviteBySelect(group, group.selected)" ng-model = "group.selected"/>
+					<img  width="24px" height="24px" src="./images/grouplist_icon.png"/>
+					<span class="group-name">{{group.group_name}}</span>
+					<span class="group-user-count">({{group.user_count}})</span>
+					<span class="arrows-img" ng-click = "changeGroupshow(group)"></span>
+					<div class="col-sm-12 group-user" ng-repeat="user in group.users" ng-show = "group.show">
+						<img  width="24px" height="24px" ng-src="{{user.avatar}}"/>
+						<span class="group-name">{{user.real_name}}</span>
+					</div>
+				</div>
+			</div>
+			<div class="users-div" ng-repeat="user in userList">
+				<div class="user">
+					<input type="checkbox" ng-click = "inviteBySelect(user, user.selected)" ng-model = "user.selected" />
+					<img  width="24px" height="24px" ng-src="{{user.avatar}}"/>
+					<span class="group-name">{{user.real_name}}</span>
 				</div>
 			</div>
 		</div>
-		<div class="form-group">
-			<div class="col-sm-12">
-				<div class="dropdown">
-					<button class="btn btn-default dropdown-toggle form-control" type="button" data-toggle="dropdown">
-						{{selectedPermissionValue}}
-						<span class="caret"></span>
-					</button>
-					<ul class="dropdown-menu" role="menu">				
-						<li role="presentation" ng-repeat="value in permission_value" ng-click = "selectedPermission(value)">
-							<a role="menuitem" tabindex="-1">
-								{{value}}
-							</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<h5>留言</h5>
-		<div class="form-group">
-			<div class="col-sm-12">
-				<textarea type="text" placeholder="参与讨论" class="form-control comment-input"></textarea>
-			</div>
-		</div>
-		<div class="form-group">
-			<div class="col-sm-12">
-				<input type="button" class="btn btn-primary form-control" ng-click="showGRroupUser()" value="发送邀请"></input>
-			</div>
-		</div>
-	</form>
-	<div class="col-sm-4 select-invite">
-		groups and users
 	</div>
 </div>
